--- a/src/App.css
+++ b/src/App.css
@@ -14,5 +14,16 @@
 }
 
 .app > div{
+    flex-basis: 40vw;
     flex-grow: 1;
+}
+
+.glass-panel{
+    --border-color: rgba(255, 255, 255, 0.25);
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(3px);
+    border-top: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
+    box-shadow: 4px 4px 4px rgba(0,0,0, 0.5);
 }
