--- a/src/components/MainPanel/MainPanel.css
+++ b/src/components/MainPanel/MainPanel.css
@@ -1,9 +1,35 @@
 .main-panel{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 20px;
-    background-color: rgba(255, 0, 0, 0.2);
+    /* background-color: rgba(255, 0, 0, 0.2); */
 }
 
+.main-panel__header{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 .app-name{
     font-size: 0.9em;
+    font-weight: bold;
+}
+
+.main-panel__div-infos{
+    font-size: 1.5em;
+    font-family: "Thasadith", sans-serif;
+}
+
+.main-div-infos__div-temp{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    font-size: 2.0em;
+    font-weight: bold;
+}
+
+.main-panel__hightlight{
+    font-size: 1.1em;
     font-weight: bold;
 }
