--- a/src/components/SidePanel/SidePanel.css
+++ b/src/components/SidePanel/SidePanel.css
@@ -1,12 +1,14 @@
 .side-panel{
-    --border-color: rgba(255, 255, 255, 0.25);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.side-panel__container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     padding: 20px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(3px);
-    border-top: 1px solid var(--border-color);
-    border-right: 1px solid var(--border-color);
-    box-shadow: 4px 4px 4px rgba(0,0,0, 0.5);
 }
 
 .panel-spacer{
