--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,21 @@
 @charset "UTF-8";
 
+/* Comfortaa */
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Inter:wght@200;300;400;500;600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+/* Thasadith */
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Inter:wght@200;300;400;500;600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 *{
   padding: 0px;
   margin: 0px;
   border: none;
   text-decoration: none;
-  font-family: sans-serif;
+}
+
+body{
+  font-family: "Comfortaa", sans-serif;
+  /* font-family: "Thasadith", "Comfortaa", sans-serif; */
 }
 
 a{
