--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -6,20 +6,37 @@
     border-radius: 50px !important;
 }
 
-.search-bar svg:hover{
+.search-bar svg:nth-child(1):hover{
     cursor: pointer;
     filter: drop-shadow(0px 0px 2px white);
 }
 
-.search-bar input{
+.search-bar textarea{
     flex-grow: 1;
+    resize: none;
     font-size: 1.25em;
     font-family: "Thasadith", sans-serif;
     color: rgba(255, 255, 255, 0.7);
     background-color: transparent;
 }
 
-.search-bar input:focus{
+.search-bar textarea:focus{
     outline: none;
     color: white;
+}
+
+.loading-icon{
+    animation-name: loading-animation;
+    animation-duration: 0.75s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes loading-animation {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
