GET das informacoes da API

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -20,6 +20,11 @@
     background-color: transparent;
 }
 
+.search-bar textarea::placeholder{
+    color: rgba(255, 255, 255, 0.5);
+    opacity: 1; /* Firefox */
+}
+
 .search-bar textarea:focus{
     outline: none;
     color: white;
