--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
     height: calc(100vh - 80px);
     color: white;
     --blackness-background: rgba(0, 0, 0, 0.6);
-    background-image: linear-gradient(to bottom, var(--blackness-background), var(--blackness-background)), url(assets/images/raining.jpg);
+    background-image: linear-gradient(to bottom, var(--blackness-background), var(--blackness-background)), url(assets/images/default-bg-image.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -22,7 +22,7 @@
     --border-color: rgba(255, 255, 255, 0.25);
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(4px);
     border-top: 1px solid var(--border-color);
     border-right: 1px solid var(--border-color);
     box-shadow: 4px 4px 4px rgba(0,0,0, 0.5);
