adicao icones no forecast-card

--- a/src/components/SidePanel/SidePanel.css
+++ b/src/components/SidePanel/SidePanel.css
@@ -28,6 +28,7 @@
 .side-panel__forecast-container{
     display: flex;
     gap: 10px;
+    justify-content: space-between;
     flex-wrap: wrap;
     overflow-x: auto;
 }
