scroll horizontal aplicado no forecast-container

--- a/src/components/SidePanel/SidePanel.css
+++ b/src/components/SidePanel/SidePanel.css
@@ -33,6 +33,6 @@
     display: flex;
     gap: 25px;
     justify-content: space-between;
-    flex-wrap: wrap;
     overflow-x: auto;
+    padding-bottom: 5px;
 }
