--- a/src/components/ForecastCard/ForecastCard.css
+++ b/src/components/ForecastCard/ForecastCard.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    max-width: 25%;
+    min-width: fit-content;
 }
 
 .forecast-card div{
