--- a/src/components/ForecastCard/ForecastCard.css
+++ b/src/components/ForecastCard/ForecastCard.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    min-width: fit-content;
+    min-width: 110px;
+    width: 110px;
 }
 
 .forecast-card div{
