--- a/src/index.css
+++ b/src/index.css
@@ -30,14 +30,15 @@ a{
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color: rgba(0,0,0, 0.6);
+  background-color: rgba(0,0,0, 0.4);
   border-radius: 99px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.5);
-  border-right: 1px solid white;
-  border-top: 1px solid white;
+  background-color: rgba(255, 255, 255, 0.4);
+  --border-color: rgba(255,255,255, 0.75);
+  border-right: 1px solid var(--border-color);
+  border-top: 1px solid var(--border-color);
   border-radius: 10px;
 }
