--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@
     background-image: linear-gradient(to bottom, var(--blackness-background), var(--blackness-background)), url(assets/images/default-bg-image.jpg);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    text-shadow: 1px 1px 3px black;
 }
 
 .app > div{
@@ -26,4 +28,13 @@
     border-top: 1px solid var(--border-color);
     border-right: 1px solid var(--border-color);
     box-shadow: 4px 4px 4px rgba(0,0,0, 0.5);
+}
+
+@media (max-width: 750px) {
+    .app{
+        height: fit-content;
+        flex-direction: column;
+        padding: 20px;
+        gap: 40px;
+    }
 }
