--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url(index.css);
 
 .app{
+    position: relative;
     display: flex;
     justify-content: space-between;
     gap: 20px;
@@ -30,12 +31,21 @@
     box-shadow: 4px 4px 4px rgba(0,0,0, 0.5);
 }
 
+.a-credits{
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    color: white;
+    font-size: 0.8em;
+    opacity: 20%;
+    text-decoration: underline;
+}
+
 @media (max-width: 750px) {
     .app{
         height: fit-content;
         flex-direction: column;
-        padding: 20px;
-        padding-top: 30px;
+        padding: 30px 20px;
         gap: 40px;
     }
 
