--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 
 @media (max-width: 750px) {
     .app{
-        height: fit-content;
+        height: auto;
         flex-direction: column;
         padding: 30px 20px;
         gap: 40px;
