--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,5 @@
 @import url(index.css);
 
-#html{
-    --blackness-background: rgba(0, 0, 0, 0.6);
-    background-image: linear-gradient(to bottom, var(--blackness-background), var(--blackness-background)), url(../images/default-bg-image-compressed.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(128, 128, 128);
-}
-
 .app{
     position: relative;
     display: flex;
@@ -18,6 +8,11 @@
     padding: 40px;
     height: calc(100vh - 80px);
     color: white;
+    --blackness-background: rgba(0, 0, 0, 0.6);
+    background-image: linear-gradient(to bottom, var(--blackness-background), var(--blackness-background)), url(assets/images/default-bg-image.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     text-shadow: 1px 1px 3px black;
 }
 
@@ -50,11 +45,12 @@
     .app{
         height: auto;
         flex-direction: column;
+        background-attachment: scroll;
         padding: 30px 20px;
         gap: 40px;
     }
 
-    #html{
+    .app.alt{
         background-position: left center;
     }
 }
