adicao min-height para o html

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
   text-decoration: none;
 }
 
+@media (max-width: 750px){
+  html{
+    min-height: calc(100% + 60px);
+  }
+}
+
 body{
   font-family: "Comfortaa", sans-serif;
   /* font-family: "Thasadith", "Comfortaa", sans-serif; */
